add_subdirectory(artery)
add_subdirectory(highway-police)
if(WITH_ENVMOD)
    add_subdirectory(rsu_grid)
endif()
if(WITH_STORYBOARD)
    add_subdirectory(storyboard)
endif()
if(WITH_TESTBED)
    add_subdirectory(testbed)
endif()
if(WITH_TRANSFUSION)
    add_subdirectory(transfusion)
endif()
if(WITH_OTS)
    add_opp_run(ots_demo WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ots-demo)
endif()


if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/mt-its2017/omnetpp.ini AND WITH_STORYBOARD)
    add_opp_run(mtits2017 WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/mt-its2017)
    add_opp_test(mtits2017 SUFFIX test SIMTIME_LIMIT 30s)
endif()

if(TARGET lte)
    # keep artery-lte target for backward-compatibility
    add_library(artery-lte ALIAS artery)
    add_opp_run(simulte WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/simulte)
    add_opp_test(simulte SUFFIX cellular CONFIG VoIP-UpLink SIMTIME_LIMIT 10s)
    add_opp_test(simulte SUFFIX d2d CONFIG AlertMulticast SIMTIME_LIMIT 25s)
endif()

if(TARGET lte AND WITH_STORYBOARD)
    add_subdirectory(lte-blackice)
endif()


add_opp_run(F2MD_Highway_CAM WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/F2MD_Highway_CAM)
add_opp_run(F2MD_Highway_CPM WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/F2MD_Highway_CPM)
add_opp_run(Highway_CPM WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Highway_CPM)
add_opp_run(Tjunction WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Tjunction)
add_opp_run(F2MD_IRTS_2 WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/F2MD_IRTS_2)
add_opp_run(pasubio WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/pasubio)
add_opp_run(mini_LuST WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/mini_LuST)
add_opp_run(LuSTMini WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/LuSTMiniScenario)
add_opp_run(LuSTNano WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/LuSTNanoScenario)

add_subdirectory(F2MD_IRTS)
add_subdirectory(co_simulation_carla)